# musq

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  FAQ.md  LICENSE  README.md  musq.rs
crates/musq/: Cargo.toml  build.rs
crates/musq-macros/: Cargo.toml
crates/musq-macros/src/: core.rs  decode.rs  encode.rs  json.rs  lib.rs  query_macros.rs  row.rs  sql.rs
crates/musq-macros/src/tests/: decode.rs  encode.rs  from_row.rs  json.rs  mod.rs
crates/musq-macros/tests/: derive.rs
crates/musq-macros/tests/trybuild/: fail_codec_enum.rs  fail_codec_enum.stderr  fail_decode.rs  fail_encode.rs  fail_json.stderr  fail_row_flatten_skip.rs  fail_row_flatten_try_from.rs  fail_row_flatten_try_from.stderr  fail_row_prefix_without_flatten.rs  fail_sql.rs  fail_sql.stderr  fail_sql_empty_idents.stderr  fail_sql_malformed.rs  fail_sql_malformed.stderr  fail_sql_malformed2.rs  fail_sql_missing_named.rs  fail_sql_missing_named.stderr  fail_sql_unclosed.stderr  fail_upsert_non_identifier.rs  fail_upsert_non_identifier.stderr  fail_upsert_old_syntax.stderr  pass_codec.rs  pass_encode.rs  pass_json.rs  pass_option_flatten.rs  pass_sql.rs  pass_sql_ident.rs  pass_sql_list.rs  pass_sql_named.rs  pass_sql_values_macro.rs
crates/musq-test/: Cargo.toml
crates/musq-test/src/: lib.rs
crates/musq/examples/: executor_interchangeability.rs  readme_codec_derives.rs  readme_features.rs  readme_fromrow_derive.rs  readme_json_derive.rs  readme_quickstart.rs  readme_snippets.rs  vec.rs
crates/musq/src/: async_stream.rs  column.rs  debugfn.rs  decode.rs  encode.rs  enum_mode.rs  error.rs  executor.rs  expr.rs  from_row.rs  insert_builder.rs  lib.rs  logger.rs  musq.rs  query.rs  query_as.rs  query_builder.rs  query_common.rs  query_result.rs  query_scalar.rs  row.rs  statement_cache.rs  transaction.rs  ustr.rs  values.rs
crates/musq/src/pool/: connection.rs  connection_like.rs  executor.rs  inner.rs  mod.rs
crates/musq/src/sqlite/: arguments.rs  error.rs  ffi.rs  mod.rs  type_info.rs  value.rs
crates/musq/src/types/: bool.rs  bstr.rs  bytes.rs  float.rs  int.rs  mod.rs  str.rs  time.rs  uint.rs  vec.rs
crates/musq/tests/: concurrent.rs  connection_flows.rs  derives.rs  dynamic_values.rs  error.rs  executor.rs  in_memory_settings.rs  insert_builder.rs  invalid_utf8.rs  large_blob.rs  logger.rs  null_decode.rs  pool_close.rs  pool_connection_drop.rs  pool_executor.rs  query_builder.rs  query_join.rs  quote_identifier.rs  renamed_dependency.rs  row_materialization_alloc.rs  sql_macro.rs  sql_macros.rs  sqlite.rs  sqlite_capabilities.rs  sqlite_connection_control.rs  sqlite_modern_sql.rs  try_from.rs  trybuild_macros.rs  types.rs  vec.rs
crates/musq/tests/support/: db.rs  mod.rs
crates/musq/tests/trybuild/: fail_codec.rs  fail_codec.stderr  fail_decode.stderr  fail_encode.stderr  fail_from_row.rs  fail_from_row.stderr  fail_from_row_tuple_attrs.rs  fail_from_row_tuple_attrs.stderr  fail_json.rs  fail_row_flatten_skip.stderr  fail_row_prefix_without_flatten.stderr  fail_sql.stderr  fail_sql_empty_idents.rs  fail_sql_empty_values.rs  fail_sql_empty_values.stderr  fail_sql_malformed2.stderr  fail_sql_missing_named.stderr  fail_sql_too_many.rs  fail_sql_too_many.stderr  fail_sql_unclosed.rs  fail_sql_unused_named.rs  fail_sql_unused_named.stderr  fail_upsert_empty_exclude.rs  fail_upsert_empty_exclude.stderr  fail_upsert_old_syntax.rs  pass_decode.rs  pass_from_row.rs  pass_from_row_attrs.rs  pass_from_row_tuple.rs  pass_sql.rs  pass_upsert_syntax.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
examples/stresstest/: Cargo.toml
examples/stresstest/src/: main.rs
musq/: Cargo.toml
musq-macros/: Cargo.toml
musq-macros/src/: core.rs  decode.rs  encode.rs  json.rs  lib.rs  row.rs  typ.rs
musq/src/: async_stream.rs  column.rs  decode.rs  encode.rs  error.rs  executor.rs  from_row.rs  lib.rs  mapped_query.rs  musq.rs  query.rs  query_as.rs  query_scalar.rs  row.rs  statement_cache.rs  transaction.rs
musq/src/pool/: connection.rs  executor.rs  inner.rs  maybe.rs  mod.rs  options.rs
musq/src/sqlite/: arguments.rs  mod.rs  type_info.rs  value.rs
musq/src/sqlite/connection/: establish.rs  execute.rs  executor.rs  handle.rs  mod.rs  worker.rs
musq/src/sqlite/statement/: compound.rs  handle.rs  mod.rs  unlock_notify.rs  virtual.rs
musq/src/types/: bool.rs  bstr.rs  bytes.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  time.rs  uint.rs
musqlite/: Cargo.toml
musqlite-macros2/: Cargo.toml
musqlite-macros2/src/: attrs.rs  core.rs  decode.rs  encode.rs  lib.rs  typ.rs
musqlite/src/: async_stream.rs  column.rs  connect.rs  decode.rs  describe.rs  encode.rs  error.rs  executor.rs  from_row.rs  lib.rs  logger.rs  musqlite.rs  query.rs  query_as.rs  query_builder.rs  query_scalar.rs  row.rs  statement.rs  transaction.rs  ustr.rs
musqlite/src/pool/: connection.rs  executor.rs  inner.rs  mod.rs  options.rs
musqlite/src/sqlite/: arguments.rs  error.rs  mod.rs  regexp.rs  type_info.rs  value.rs
musqlite/src/sqlite/connection/: collation.rs  establish.rs  execute.rs  executor.rs  handle.rs  mod.rs
musqlite/src/sqlite/options/: auto_vacuum.rs  connect.rs  journal_mode.rs  locking_mode.rs  mod.rs  (+2 more)
musqlite/src/types/: bool.rs  bstr.rs  bytes.rs  chrono.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  time.rs  uint.rs  uuid.rs
sqlx-bench/: Cargo.toml  README.md
sqlx-core/: Cargo.toml
sqlx-core/src/: describe.rs  error.rs  from_row.rs  lib.rs  query_builder.rs  sync.rs
sqlx-core/src/ext/: ustr.rs
sqlx-core/src/io/: mod.rs
sqlx-core/src/pool/: connection.rs  inner.rs  mod.rs  options.rs
sqlx-core/src/rt/: mod.rs
sqlx-core/src/sqlite/: arguments.rs  error.rs  logger.rs  mod.rs  regexp.rs  type_info.rs  value.rs
sqlx-core/src/testing/: mod.rs
sqlx-core/src/types/: mod.rs
sqlx-macros/: Cargo.toml
sqlx-macros-core/: Cargo.toml
sqlx-macros-core/src/: lib.rs  test_attr.rs
sqlx-macros-core/src/database/: mod.rs  sqlite.rs
sqlx-macros-core/src/derives/: decode.rs  encode.rs  type.rs
sqlx-macros/src/: lib.rs
sqlx-macros/src/derives/: decode.rs  encode.rs  type.rs
(+194 files in other folders)
