[workspace]
members = [ "musq", "musq-macros", "musq-test", "examples/*" ]

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/cortesi/musq"
keywords = ["database", "async", "sqlite"]
categories = ["database", "asynchronous"]
authors = ["Aldo Cortesi <aldo@corte.si>"]

[package]
name = "tests"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
musq = { path = "musq" }
musq-macros-core = { path = "musq-macros-core" }
musq-macros = { path = "musq-macros" }

[dependencies]
musq = { workspace = true }
musq-macros = { workspace = true }

[dev-dependencies]
anyhow = "1.0.52"
time_ = { version = "0.3.2", package = "time" }
futures = "0.3.19"
env_logger = "0.11.3"
tokio = { version = "1.15.0", features = ["full"] }
musq-test = { path = "./musq-test" }
paste = "1.0.6"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
url = "2.2.2"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
hex = "0.4.3"
tempdir = "0.3.7"
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "benchmark"
harness = false
