[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2024"
repository = "https://github.com/cortesi/musq"
keywords = ["database", "async", "sqlite"]
categories = ["database", "asynchronous"]
authors = ["Aldo Cortesi <aldo@corte.si>"]

[workspace.dependencies]
musq = { path = "crates/musq" }
musq-macros = { path = "crates/musq-macros" }
