[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
version = "0.0.2"
license = "MIT"
edition = "2024"
repository = "https://github.com/cortesi/musq"
keywords = ["database", "async", "sqlite"]
categories = ["database", "asynchronous"]
authors = ["Aldo Cortesi <aldo@corte.si>"]

[workspace.dependencies]
musq = { path = "crates/musq" }
musq-macros = { path = "crates/musq-macros" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
cognitive_complexity = "warn"
excessive_nesting = "warn"
ignore_without_reason = "warn"
items_after_statements = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
too_many_lines = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
