[package]
name = "musq-macros"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.0"
heck = "0.5.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
