[package]
name = "musq"
description = "musq is a SQLite3 driver for Rust focusing on performance, correctness, and flexibility."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
musq-macros = { path = "../musq-macros" }
tokio = { version = "1.15.0", features = ["full"] }
time = { version = "0.3.14", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
bytes = "1.1.0"
crossbeam-queue = "0.3.2"
either = { version = "1.6.1", features = ["serde"] }
futures-channel = { version = "0.3.19", default-features = false, features = [
    "sink",
    "alloc",
    "std",
] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = [
    "alloc",
    "sink",
    "io",
] }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.132", features = ["derive", "rc"] }
sqlformat = "0.2.0"
thiserror = "1.0.30"
tracing = { version = "0.1.37", features = ["log"] }
smallvec = "1.7.0"
bstr = { version = "1.0", default-features = false, features = ["std"] }
hashlink = "0.9.1"
indexmap = "2.0"
event-listener = "5.3.1"
flume = "0.11.0"
futures-executor = "0.3.28"
libsqlite3-sys = { version = "0.29", features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify",
] }
futures-intrusive = "0.5.0"
atoi = "2.0.0"

[dev-dependencies]
musq-test = { path = "../musq-test" }
