[package]
name = "musqlite"
description = "Core of SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
bit-vec = "0.6.3"
ipnetwork = "0.20.0"
mac_address = "1.1.5"
time = { version = "0.3.14", features = ["formatting", "parsing", "macros"] }
uuid = "1.1.2"
ahash = "0.8"
bytes = "1.1.0"
crossbeam-queue = "0.3.2"
either = { version = "1.6.1", features = ["serde"] }
futures-channel = { version = "0.3.19", default-features = false, features = [
    "sink",
    "alloc",
    "std",
] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = [
    "alloc",
    "sink",
    "io",
] }
log = { version = "0.4.14", default-features = false }
percent-encoding = "2.1.0"
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = { version = "1.0.73", features = ["raw_value"] }
sqlformat = "0.2.0"
thiserror = "1.0.30"
tracing = { version = "0.1.37", features = ["log"] }
smallvec = "1.7.0"
url = { version = "2.2.2", default-features = false }
bstr = { version = "1.0", default-features = false, features = ["std"] }
hashlink = "0.8.0"
indexmap = "2.0"
event-listener = "2.5.2"
flume = "0.11.0"
futures-executor = "0.3.29"
libsqlite3-sys = { version = "0.26", features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify",
    "bundled-sqlcipher",
] }

futures-intrusive = "0.5.0"
regex = "1.10.2"
atoi = "2.0.0"

[dev-dependencies]
musqlite-test = { path = "../musqlite-test" }
musqlite-macros = { path = "../musqlite-macros" }
