[package]
name = "sqlx-bench"
version = "0.1.0"
authors = ["Austin Bonander <austin@launchbadge.com>"]
edition = "2021"
publish = false

[features]

sqlite = ["sqlx/sqlite"]

[dependencies]
criterion = "0.3.3"
dotenvy = "0.15.0"
once_cell = "1.4"
sqlx = { workspace = true, default-features = false, features = ["macros"] }

chrono = "0.4.19"

[[bench]]
name = "sqlite_fetch_all"
harness = false
required-features = ["sqlite"]
