[package]
name = "sqlx-macros-core"
description = "Macro support core for SQLx, the Rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

# for conditional compilation
_rt-tokio = ["tokio", "sqlx-core/_rt-tokio"]

# database
sqlite = ["sqlx-sqlite"]

# type integrations
json = ["sqlx-core/json", "sqlx-sqlite?/json"]

bit-vec = ["sqlx-core/bit-vec"]
chrono = ["sqlx-core/chrono", "sqlx-sqlite?/chrono"]
ipnetwork = ["sqlx-core/ipnetwork"]
mac_address = ["sqlx-core/mac_address"]
time = ["sqlx-core/time", "sqlx-sqlite?/time"]
uuid = ["sqlx-core/uuid", "sqlx-sqlite?/uuid"]

[dependencies]
sqlx-core = { workspace = true }
sqlx-sqlite = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }

dotenvy = { workspace = true }

hex = { version = "0.4.3" }
heck = { version = "0.4", features = ["unicode"] }
either = "1.6.1"
once_cell = "1.9.0"
proc-macro2 = { version = "1.0.36", default-features = false }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73" }
sha2 = { version = "0.10.0" }
syn = { version = "1.0.84", default-features = false, features = [
    "full",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
] }
tempfile = { version = "3.3.0" }
quote = { version = "1.0.14", default-features = false }
url = { version = "2.2.2", default-features = false }
