[package]
name = "sqlx-macros"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
sqlx-macros-core = { workspace = true }

syn = { version = "1.0.84", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
quote = { version = "1.0.14", default-features = false }
