[package]
name = "sqlx-macros"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = { version = "0.4", features = ["unicode"] }
proc-macro2 = { version = "1.0.36", default-features = false }

syn = { version = "1.0.84", default-features = false, features = [
    "proc-macro",
    "full",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
] }
quote = { version = "1.0.14", default-features = false }
