[package]
name = "musq-test"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
musq.workspace = true
anyhow = "1.0.26"

[lints]
workspace = true
