[package]
name = "musq"
description = "musq is a SQLite3 driver for Rust focusing on performance, correctness, and flexibility."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
musq-macros = { path = "../musq-macros" }
tokio = { version = "1.15.0", features = ["full"] }
time = { version = "0.3.14", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
bytes = "1.1.0"
crossbeam-queue = "0.3.2"
either = { version = "1.6.1", features = ["serde"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = [
    "alloc",
    "sink",
    "io",
] }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.132", features = ["derive", "rc"] }
sqlformat = "0.3.5"
thiserror = "2.0.12"
tracing = { version = "0.1.37", features = ["log"] }
bstr = { version = "1.0", default-features = false, features = ["std"] }
hashlink = "0.10.0"
indexmap = "2.0"
event-listener = "5.3.1"
flume = "0.11.0"
futures-executor = "0.3.28"
libsqlite3-sys = { version = "0.35", features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify",
] }
atoi = "2.0.0"

[dev-dependencies]
musq-test = { path = "../musq-test" }
anyhow = "1.0.52"
futures = "0.3.19"
env_logger = "0.11.3"
tokio = { version = "1.15.0", features = ["full"] }
paste = "1.0.6"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
url = "2.2.2"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
hex = "0.4.3"
tempdir = "0.3.7"
criterion = { version = "0.6", features = ["async_tokio"] }
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "benchmark"
harness = false
path = "../../benches/benchmark.rs"
