[package]
name = "musq"
description = "musq is a SQLite3 driver for Rust focusing on performance, correctness, and flexibility."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
musq-macros = { path = "../musq-macros", version = "0.0.2" }
tokio = { version = "1.15.0", features = ["full"] }
time = { version = "0.3.14", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
bytes = "1.1.0"
crossbeam-queue = "0.3.2"
either = { version = "1.6.1", features = ["serde"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = [
    "alloc",
    "sink",
    "io",
] }
async-stream = "0.3"
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = "1.0.73"
sqlformat = "0.5"
thiserror = "2.0.12"
tracing = { version = "0.1.37", features = ["log"] }
bstr = { version = "1.0", default-features = false, features = ["std"] }
hashlink = "0.11"
indexmap = "2.0"
event-listener = "5.3.1"
flume = "0.12"
futures-executor = "0.3.28"
libsqlite3-sys = { version = "0.36", features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify",
] }
atoi = "2.0.0"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0.52"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
paste = "1.0.6"
serde = { version = "1.0.132", features = ["derive"] }
rand = "0.9.0"
rand_xoshiro = "0.7.0"
tempdir = "0.3.7"
criterion = { version = "0.8", features = ["async_tokio"] }
trybuild = "1.0"

[lints]
workspace = true

[[bench]]
name = "benchmark"
harness = false
path = "../../benches/benchmark.rs"
