[package]
name = "musq"
description = "Musq is an asynchronous SQLite toolkit for Rust."
readme = "../../README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["vec"]
vec = ["dep:sqlite-vec", "dep:bytemuck"]

[dependencies]
musq-macros.workspace = true
tokio = { version = "1.15.0", features = ["full"] }
time = { version = "0.3.14", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
bytes = "1.1.0"
crossbeam-queue = "0.3.2"
either = { version = "1.6.1", features = ["serde"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = [
    "alloc",
    "sink",
    "io",
] }
async-stream = "0.3"
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = "1.0.73"
sqlformat = "0.5"
thiserror = "2.0.12"
tracing = { version = "0.1.37", features = ["log"] }
bstr = { version = "1.0", default-features = false, features = ["std"] }
hashlink = "0.12"
indexmap = "2.0"
event-listener = "5.3.1"
flume = "0.12"
futures-executor = "0.3.28"
libsqlite3-sys = { version = "0.38", default-features = false, features = [
    "bundled",
    "pkg-config",
    "unlock_notify",
    "vcpkg",
] }
atoi = "3.1.0"
async-trait = "0.1"
sqlite-vec = { version = "0.1.9", optional = true }
bytemuck = { version = "1.25.0", optional = true }

[dev-dependencies]
anyhow = "1.0.52"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
paste = "1.0.6"
serde = { version = "1.0.132", features = ["derive"] }
rand = "0.10.2"
rand_xoshiro = "0.8.1"
tempdir = "0.3.7"
criterion = { version = "0.8", features = ["async_tokio"] }
trybuild = "1.0"

[lints]
workspace = true

[[bench]]
name = "benchmark"
harness = false
path = "../../benches/benchmark.rs"
