[package]
name = "xtask"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }

[lints]
workspace = true
